--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -39,8 +39,11 @@ Template: blocksy
     box-sizing: border-box;
 }
 
-:focus {
+*:hover,
+*:focus {
     outline: none;
+    background: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
 [type="search"]::-webkit-search-cancel-button,
@@ -467,6 +470,10 @@ main {
     border-radius: 1rem;
     padding: .5rem;
 
+    .search {
+        flex: 1;
+    }
+
     .actions {
         display: flex;
         align-items: center;
@@ -477,7 +484,7 @@ main {
 .search-form {
     display: flex;
     align-items: center;
-    flex: 1;
+    max-width: 100%;
 
     &:after {
         content: '';
@@ -496,6 +503,7 @@ main {
         font-size: 1rem;
         flex: 1;
         max-width: 100%;
+        width: 100%;
     }
 
     .search-button {
@@ -638,7 +646,7 @@ main {
 
 .tags {
     display: none;
-    grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
     gap: 1rem;
     padding: 1rem 1.5rem;
     background: rgba(128, 128, 128, .1);
