--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -434,7 +434,8 @@ main {
 }
 
 .filter {
-    padding: 1rem 4vw;
+    padding: 0 4vw 1rem;
+    margin-top: 1rem;
     position: sticky;
     top: 5rem;
     z-index: 6;
